--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -13,6 +13,26 @@
             bottom: 12px;
         }
     }
+    &-nudger {
+        transition: transform 0.4s;
+        &::after{
+            content: '';
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            background: rgba(0,0,0,0);
+            z-index: 2000;
+            pointer-events: none;
+            transition: background 0.4s;
+
+        }
+        &.nudge-left {
+            transform: translateX(-60px);
+            &::after {
+                background: rgba(0,0,0,0.15);
+            }
+        }
+    }
     &-body {
         &-spacer {
             &-header {
@@ -23,4 +43,12 @@
             }
         }
     }
+}
+
+// transitions
+.slideInRight, .slideOutRight {
+    -webkit-animation-duration: 0.4s;
+    -moz-animation-duration: 0.4s;
+    -o-animation-duration: 0.4s;
+    animation-duration: 0.4s;
 }
